# ManageHub

./: ADMIN_SETUP_GUIDE.md  CI_STATUS.md  ERROR_CODES_FRONTEND.md  IMPLEMENTATION_SUMMARY.md  PROFILE_IMPLEMENTATION.md  QUICK_ADMIN_GUIDE.md  README.md  package-lock.json  package.json
backend/: README.md  (+9 more)
contracts/: .gitignore  Cargo.toml  README.md  membership_token.rs
contracts/access_control/: Cargo.toml  README.md
contracts/access_control/src/: access_control.rs  access_control_tests.rs  errors.rs  lib.rs  types.rs
contracts/access_control/test_snapshots/access_control_tests/: test_admin_transfer_cancellation.1.json  test_admin_transfer_security.1.json  test_blacklist_functionality.1.json  test_blacklisted_user_access_denied.1.json  test_check_access_hierarchy.1.json  test_config_management.1.json  (+12 more)
contracts/cntr/: Cargo.toml
contracts/cntr/src/: cancellation_policy.rs  credit_deduction.rs  credit_topup.rs  dispute_window.rs  escrow_refund.rs  escrow_release.rs  grace_period.rs  lib.rs  member_tier.rs  multi_booking.rs  payment_validator.rs  referral_reward.rs  role_checker.rs  subscription_expiry.rs  token_validator.rs  withdrawal_validator.rs
contracts/cntr/tests/: access_control_tests.rs  payment_verification_tests.rs  resource_credits_tests.rs
contracts/common_types/: Cargo.toml
contracts/common_types/src/: errors.rs  lib.rs  test_contract.rs  types.rs
contracts/contracts/access-control/: Cargo.toml  README.md
contracts/contracts/managehub_contract/: Cargo.toml  README.md
contracts/contracts/membership-token/: Cargo.toml  ReadMe.md
contracts/manage_hub/: Cargo.toml
contracts/manage_hub/src/: allowance.rs  attendance_log.rs  batch.rs  errors.rs  fractionalization.rs  guards.rs  lib.rs  membership_token.rs  rewards.rs  staking.rs  subscription.rs  test.rs  types.rs  upgrade.rs  validation.rs
contracts/membership_token/: Cargo.toml  ReadMe.md
contracts/membership_token/src/: lib.rs  test.rs
contracts/payment_escrow/: Cargo.toml  test_solution_09_dispute_flow.rs
contracts/payment_escrow/src/: errors.rs  lib.rs  test.rs  types.rs
contracts/resource_credits/: Cargo.toml
contracts/resource_credits/src/: errors.rs  lib.rs  types.rs
contracts/sandbox/: deploy.ts
contracts/sandbox/common_types/: index.ts
contracts/sandbox/credential_badge/: Cargo.toml
contracts/sandbox/event_ticketing/: Cargo.toml
contracts/sandbox/referral/: referral-query.client.ts  referral-test.helpers.ts  referral.register.ts  referral.rewards.ts  referral.tracking.ts  referral.types.ts
contracts/sandbox/revenue_distribution/: Cargo.toml  beneficiaryManager.ts  distribution.ts  queries.ts  revenue_distribution.test.ts
contracts/workspace_booking/: Cargo.toml  booking_lifecycle-test.rs
contracts/workspace_booking/src/: errors.rs  lib.rs  test.rs  types.rs
(+1863 files in other folders)
