[workspace]
resolver = "2"
members = [
    "access_control",
    "manage_hub",
    "membership_token",
    "common_types"
]

[workspace.dependencies]
soroban-sdk = "22.0.0"
common_types = { path = "common_types" }
membership_token = { path = "membership_token" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true