[workspace]
resolver = "2"
members = [
    "access_control",
    "manage_hub",
    "membership_token",
    "common_types",
    "workspace_booking",
    "payment_escrow",
    "resource_credits",
]

[workspace.dependencies]
soroban-sdk = "23.4.1"
common_types = { path = "common_types" }
membership_token = { path = "membership_token" }

# ethnum 1.5.2 has a transmute bug that breaks on current stable rustc (E0512).
# Pin to 1.5.3 which fixes it.
[patch.crates-io]
ethnum = { version = "1.5.3" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true