[package]
name = "manage_hub"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
common_types = { workspace = true }
membership_token = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }