[package]
name = "membership_token"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
access_control = { path = "../access_control" }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "membership-token"
path = "src/bin/membership-token.rs"